# check_msdefender

./: .coverage  .gitignore  .pdm-python  README.md  check_msdefender.ini.example  publish.sh  pyproject.toml  sonar-project.properties
.claude/: settings.local.json
.github/workflows/: publish.yml  python-package.yml  python-publish.yml
check_msdefender/: __init__.py  integration.py
check_msdefender/cli/: __init__.py  decorators.py  handlers.py
check_msdefender/cli/commands/: __init__.py  alerts.py  detail.py  incidents.py  lastseen.py  machines.py  onboarding.py  products.py  vulnerabilities.py
check_msdefender/core/: auth.py  config.py  defender.py  exceptions.py  logging_config.py  models.py  nagios.py
check_msdefender/services/: alerts_service.py  detail_service.py  incidents_service.py  lastseen_service.py  machine_resolver.py  machines_service.py  models.py  onboarding_service.py  products_service.py  vulnerabilities_service.py
doc/: code-quality.md  quality-history.csv
scripts/: quality_metrics.py  sonar_gate.py
tests/: conftest.py
tests/fixtures/: alerts_data.json  mock_defender_client.py  test_alerts_service.py  test_detail_service.py  test_incidents_service.py  test_lastseen_service.py  test_onboarding_service.py  test_vulnerabilities_service.py
tests/integration/: test_cli_integration.py  test_lastseen_integration.py  test_real_api.py
tests/unit/: test_alerts_service.py  test_config.py  test_defender_client.py  test_incidents_service.py  test_machine_resolver.py  test_machines_service.py  test_products_service.py
typings/nagiosplugin/: __init__.pyi
