[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "check-msdefender"
dynamic = ["version"]
authors = [
    {name = "ldvchosal", email = "ldvchosal@github.com"},
]
description = "A Nagios plugin for monitoring Microsoft Defender API endpoints"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
keywords = ["nagios", "monitoring", "microsoft", "graph", "api", "azure"]
dependencies = [
    "nagiosplugin>=1.4.0",
    "azure-identity>=1.12.0",
    "click>=8.0,<9.0"
]

[project.urls]
Homepage = "https://github.com/lduchosal/check_msdefender"
"Bug Reports" = "https://github.com/lduchosal/check_msdefender/issues"
Source = "https://github.com/lduchosal/check_msdefender"
Documentation = "https://github.com/lduchosal/check_msdefender/blob/main/README.md"

[project.scripts]
check_msdefender = "check_msdefender.cli:main"
check_msdefender_integration = "check_msdefender.integration:main"

[tool.setuptools.package-data]
"*" = ["*.ini"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[tool.vulture]
ignore_decorators = ["@click"]
make_whitelist = true
min_confidence = 80
paths = ["check_msdefender", "tests"]
sort_by_size = true
verbose = false

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
fail-under = 95
exclude = ["tests", "docs", "build", "dist"]
verbose = 1
quiet = false
whitelist-regex = []
color = true

[tool.docformatter]
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
close-quotes-on-newline = true
pre-summary-newline = true
in-place = true

[tool.pdm-bump]
version-files = [
    "check_msdefender/__init__.py:__version__",
]

[tool.pdm]
distribution = true
version = {source = "file", path = "check_msdefender/__init__.py"}
[tool.pdm.scripts]
format = "ruff format"
typecheck = "pyright check_msdefender/"
build = "python -m build"
publish = "python -m twine upload dist/* --verbose"
install = "pdm install"
install-dev = "pdm install -G dev"
clihelp = "check_msdefender --help"
climachines = "check_msdefender machines"
cli = {composite = ["clihelp", "climachines"]}
all = {composite = ["install", "format", "build", "test", "cli"]}

test = "python -m pytest tests/ -v --cov=check_msdefender --cov-report=term-missing"
test-quick = "python -m pytest tests/ --tb=no -q"
test-ci = "python -m pytest tests/ -v --cov=check_msdefender --cov-report=term-missing -m 'not reverseproxy'"
test-unit = "python -m pytest tests/unit/ -v"
test-integration = "python -m pytest tests/integration/ -v"
test-cov = "python -m pytest tests/ -v --cov=check_msdefender --cov-report=html --cov-report=term-missing"
lint = "ruff check check_msdefender/ tests/"
lint-fix = "ruff check --fix check_msdefender/ tests/"
isort = "ruff check --select I --fix check_msdefender/ tests/"
format-check = "ruff format --check check_msdefender/ tests/"
docformatter = "docformatter check_msdefender/ tests/"
interrogate = "interrogate -v --omit-covered-files check_msdefender/"
vulture = "vulture check_msdefender/ tests/"
refurb = "refurb check_msdefender/ tests/"
check = ["lint", "format-check", "typecheck", "test"]
bump-version = "pdm bump patch"
env = "echo ${PATH}"
clean = "rm -rf .coverage htmlcov/ .pytest_cache/ __pycache__/ check_msdefender/__pycache__/"
version-show = "python -c 'import check_msdefender; print(check_msdefender.__version__)'"
version-patch = "pdm bump patch"
version-minor = "pdm bump minor"
version-major = "pdm bump major"


[dependency-groups]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-asyncio>=1.0",
    "twine>=6.2.0",
    "pdm>=2.0.0",
    "ruff>=0.13.0",
    "pyright>=1.1",
    "pdm-bump",
    "vulture>=2.0",
    "refurb>=2.0",
    "interrogate>=1.5",
    "docformatter>=1.7",
]
